tests/scripts/errors/runtime/infinite_recursion.cdo
FUNCTION recurse() { RETURN recurse(); }
recurse();
